# autogen-babies

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile
src/autogen_experiments/ai_coach/: main.py
src/autogen_experiments/postgres_ai_agent/: classprompt.txt  construct_agent.example.py  main.py  notes.md
src/autogen_experiments/postgres_ai_agent/modules/: db.py
src/echohive/: 1_basic.py  2_agentchat_auto_feedback_from_code_execution.py  3_agentchat_human_feedback.py  4_agentchat_web_info.py  5_agentchat_function_call.py
src/notebooks/: helloworld.ipynb
src/notebooks/agent_output/: stock_price_plot.py
